fix svg on safari

--- a/styles/partials/_layout.scss
+++ b/styles/partials/_layout.scss
@@ -34,6 +34,8 @@ svg.svg-inline--fa.fa-bell.fa-w-14 {
 	font-size: 22px;
 	color: var(--purple);
 	transition: color 0.25s ease-in;
+	width: 18px;
+	height: 18px;
 }
 .dark svg.svg-inline--fa.fa-moon.fa-w-16,
 .dark svg.svg-inline--fa.fa-lock.fa-w-14,
@@ -42,6 +44,8 @@ svg.svg-inline--fa.fa-bell.fa-w-14 {
 	font-size: 22px;
 	color: var(--dark-link);
 	transition: color 0.25s ease-in;
+	width: 18px;
+	height: 18px;
 }
 .dark nav {
 	background-color: rgba(51, 51, 51, 0.95);
