--- a/styles/partials/_navbar.scss
+++ b/styles/partials/_navbar.scss
@@ -47,6 +47,8 @@ svg.svg-inline--fa.fa-bell {
 	color: rebeccapurple;
 	-webkit-transition: color 0.35s ease-in;
 	transition: color 0.35s ease-in;
+	width: 18px;
+	height: 18px;
 }
 svg.svg-inline--fa.fa-sun:hover,
 svg.svg-inline--fa.fa-sun:focus,
@@ -69,6 +71,8 @@ svg.svg-inline--fa.fa-bell:focus {
 .dark svg.svg-inline--fa.fa-bell {
 	color: #ffa804;
   transition: color 0.25s ease-in;
+	width: 18px;
+	height: 18px;
 }
 .dark svg.svg-inline--fa.fa-sun:hover,
 .dark svg.svg-inline--fa.fa-sun:focus,
